SERVER-38314 IndexBuilder should not be interrupted while reacquiring database lock